# petri-bio

./: .gitignore  README.md  pyproject.toml
config/: eval.yaml  knockout.yaml  predict.yaml  preprocess.yaml  train.yaml
config/callbacks/: eval.yaml  train.yaml
config/callbacks/components/: early_stopping.yaml  model_checkpoint.yaml
config/data/: default.yaml  knockout.yaml  predict.yaml
config/experiment/: 0-baseline.yaml  1-connectivity.yaml  2-source-dest.yaml  3-node-type.yaml  4-edge-aware.yaml
config/extras/: default.yaml
config/hydra/: eval.yaml  knockout.yaml  predict.yaml  preprocess.yaml  train.yaml
config/logger/: csv.yaml
config/model/: default.yaml
config/paths/: default.yaml
config/trainer/: default.yaml  gpu.yaml
experiments/monotonicity/0-baseline/eval/fold_0/logs/: metrics.csv  test_predictions.csv
experiments/monotonicity/0-baseline/eval/fold_1/logs/: metrics.csv  test_predictions.csv
experiments/monotonicity/0-baseline/eval/fold_2/logs/: metrics.csv  test_predictions.csv
experiments/monotonicity/4-edge-aware/predict/: timing.csv
experiments/robustness/4-edge-aware/predict/: timing.csv
experiments/sensitivity/4-edge-aware/predict/: timing.csv
notebooks/: evaluation.ipynb  hparams.ipynb
src/: eval.py  knockout.py  predict.py  preprocess.py  train.py
src/datamodules/: datamodules.py  datasets.py  features.py  graphs.py  preprocess.py  transforms.py
src/models/: embedder.py  model.py
src/utils/: evaluation.py  metrics.py  misc.py  paths.py  plots.py  pylogger.py  rich_utils.py
(+4555 files in other folders)
